Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Some labels were not translated
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-